--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -57,10 +57,7 @@ Although CAN is an event-based bus,
 it is often used with periodic scheduling schemes so the network usage can be statically
 analyzed. Hence, our monitoring approach is based on a time-triggered, network sampling
 model which allows it to monitor time-triggered networks as well.
-We add \monitor as a
-passive external bus-monitor which can only check system properties
-that are observable by passive
-observation of the messages transmitted through CAN.
+We use \monitor as a passive external bus-monitor which can only check system properties that are observable by passive observation of the messages transmitted through CAN.
 
 
 
