--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -119,8 +119,7 @@ monitors which utilize instrumentation to obtain system state, which is not suit
 systems. Reinbacher et. al. present an embedded past-time MTL monitor in \cite{Reinbacher2013} which generates FPGA-based non-invasive monitors.
 The actual implementation they describe does however presume system memory access to obtain system state (rather than using state from the target network).
 Pellizzoni et. al. describe a monitor for COTS peripherals in \cite{Pellizzoni2008}.
-They generate FPGA monitors that passively observe PCI-E buses to verify system properties.
-Although their architecture is similar to ours, but they only check past-time LTL and
+They generate FPGA monitors that passively observe PCI-E buses to verify system properties, but they only check past-time LTL and
 regular expressions which cannot capture timing properties.
 %%%%%%%%%%%%%%
 Basin et. al. compare runtime monitoring algorithms for MTL properties \cite{Basin2012}.
