--- a/rv2015/sections/Intro.tex
+++ b/rv2015/sections/Intro.tex
@@ -44,7 +44,7 @@ the necessary atomic policy-constructs \cite{Kane2014}.
 \noindent
 \textit{Specification logic.}
 To obtain the relevant safety requirements and invariants for monitoring the ARV system we consulted the safety requirements of the ARV system.
-We observed that many desired properties for these types of systems are timing related, so using an explicit-time based specification language for expressing these properties is helpful.
+Many desired properties for these types of systems are timing related, so using an explicit-time based specification language for expressing these properties is helpful.
 System requirements of the form ``\emph{the system must perform action $a$ within $t$ seconds of event $e$}'' are common, for instance, ``\emph{Cruise control shall disengage for 250ms within 500ms of the brake pedal being depressed}''.
 %
 For efficient monitoring, we use a fragment of propositional, discrete time, future-bounded metric temporal logic (MTL)\cite{Koymans1990}.
