--- a/rv2015/sections/Implementation.tex
+++ b/rv2015/sections/Implementation.tex
@@ -33,16 +33,17 @@ of the specification formulas instead.
 \noindent\textbf{Discussion. }
 Passive monitoring of running systems requires attention to timing issues with regards to system state sampling.
 %
-The monitor possesses a copy of the target system state and
-when a new CAN message from the system is seen it updates this
-system state based on the incoming message. In short, the monitor periodically
-takes a snapshot of this constantly updated state and uses that snapshot
-as the trace state which is monitored.
+The monitor possesses a copy of the target system state 
+which is updated when a new CAN message is observed.
+%and
+%when a new CAN message from the system is seen it updates this
+%system state based on the incoming message. 
+In short, the monitor periodically takes a snapshot of this constantly updated state and uses that snapshot as the trace state which is monitored.
 %
 Thus, the actual monitored state (\ie, the trace) is a discrete sampling of the monitor's constantly updated system state. 
 The monitor's period must be fast enough that any changes in system state which are relevant to the specification are seen in the sampled trace.
-To ensure this, the monitor's period should be twice as fast as the shortest CAN message period, which ensures the monitored trace contains every value seen on the CAN bus.
-If the monitor period is not fast enough, multiple CAN messages announcing the same system value may end up in the same trace state, which can cause those value changes to not be seen in the trace.
+To ensure this, the monitor's period should be twice as fast as the shortest CAN message period.
+If the monitor's period is not fast enough, multiple CAN messages announcing the same system value may end up in the same trace state causing those values to not be seen in the trace.
 For example, if the monitor is sampling at $2ms$, and three messages announcing the value of property $X$ are received at times $0ms$, $1ms$, and $1.5ms$, only the value announced at $1.5ms$ will be seen in the trace. To avoid this, the monitor would need to run faster than the messages interarrival rate (at least $0.5ms$ in this case).
 
 Along with requiring the monitor to sample its trace state fast enough to see all the relevant state changes, the specification time bounds must be a multiple of the monitoring period.
@@ -50,12 +51,9 @@ This ensures that each time step in the formula is evaluated on the updated info
 A simple way of understanding this is to use monitor steps as the temporal bounds instead of explicit time bounds.
 For example, if the monitor is running at  2ms intervals, we can use $\henceforth_{[0,50]} p$ as an equivalent to
 $\henceforth_{[0,100ms]} p$.
-As the monitored trace state is only updated at 2ms, the state is unchanged
-from 0-2ms, and then again from 2-4ms, etc.
-If a bound is not a multiple of the monitor's interval, then formulas with
-different bounds can look indistinguishable,
-\eg, $\henceforth_{[0,5ms]} p$ is equivalent to $\henceforth_{[1ms,4ms]} p$
-for a $2ms$ monitor.
+%As the monitored trace state is only updated at 2ms, the state is unchanged from 0-2ms, and then again from 2-4ms, etc.
+If a bound is not a multiple of the monitor's interval, then formulas with different bounds can look indistinguishable,
+\eg, $\henceforth_{[0,5ms]} p$ is equivalent to $\henceforth_{[1ms,4ms]} p$ for a $2ms$ monitor.
 % Since this is unintiutive, using steps or period-multiple
 % bounds is best.
 %
@@ -93,9 +91,9 @@ execution before the monitoring period whereas \ha is
 equivalent to the conservative algorithm when there is no spare execution time to perform eager checks.
 
 Figure \ref{fig:hybrid_comp} shows the detection latency for the hybrid algorithm checking  the property $(\pred{CruiseActive} \wedge \pred{brakePressed} \rightarrow \henceforth_{[250ms, 1s]} (\neg \pred{CruiseActive})$ over an artificial log using different monitor periods. 
-With a $1ms$ period the monitor is able to eagerly detect every violation as eagerly as soon as possible (\ie, when the first false inside the always occurs). 
+With a $1ms$ period the monitor is able to eagerly detect every violation as soon as possible. 
 The $8.2us$ period is able to detect some violations early, but it does not detect them as early as possible. 
-The $1us$ period is too fast and the hybrid check only provides conservative checking, identifying the violations at the promptness limit of $1s$.
+The $1us$ period is too fast so the hybrid check only provides conservative checking, identifying the violations at the promptness limit of $1s$.
 
 \begin{figure}[t]
 \centering
@@ -117,13 +115,11 @@ The $1us$ period is too fast and the hybrid check only provides conservative che
 % \end{figure}
 %
 We have also implemented \ha in our embedded board.
-\ha updates the history structures (shared between
-the conservative and eager checking) and
-performs a conservative check once every monitoring period.
-It then uses the idle time between periods to perform eager
-checking of any remaining unchecked specification properties.
-The eager checking gets interrupted  by the next period
-when the extra time runs out.
+\ha updates the history structures (shared between the conservative and eager checking) and performs a conservative check once every monitoring period.
+Eager checking is then performed until the next monitor period interrupts it.
+%It then uses any extra time to perform eager checking until the next monitor period interrupts it.
+%It then uses the idle time between periods to perform eager checking of any remaining unchecked specification properties.
+%The eager checking gets interrupted  by the next period when the extra time runs out.
 % replacing oscope figure info with hybrid eval description
 %@TODO update this
 %A quick evaluation of the hybrid monitor against offline logs demonstrates the usefulness and functionality of the hybrid approach. Figure \ref{fig:hyb_eval} shows the detection latency of specification violations for a specification with moderate temporal size.
@@ -143,9 +139,9 @@ when the extra time runs out.
 \subsection{Case Study}
 \label{sec:case_study}
 This section reports our case study performing real-time monitoring of a CAN network for realistic safety properties.
-For this case study we have obtained CAN network logs from a series of robustness tests on the ARV which we have replayed on a test CAN bus for the monitor to check.
+For this case study we have obtained CAN network logs from a series of robustness tests on the ARV which we have replayed on a test CAN bus.
 This setup %, shown in Figure \ref{fig:replaySchem},
-helps us show the feasibility of performing external bus monitoring on this class of system with real safety specifications.
+helps us show the feasibility of performing external bus monitoring on this class of system with a realistic safety specification.
 
 %% removing, takes space and not that important
 %\begin{figure}
@@ -163,23 +159,19 @@ A PC was connected to a PCAN-USB Pro \cite{PCAN-USBPro} device which provides a 
 Requirements documentation for this system was available, so we were able to build a monitoring specification based on actual system requirements.
 The specification evaluated in the embedded monitor on the test logs are shown in Table \ref{tab:monspec}. This specification was derived from the system requirements based on the observable system state available in the testing logs.
 % acknowledge that case study looks simple -- but there are reasons for that
-We note that the safety specification is simple and does not fully excercise the monitor's constraints. Safety specifications derived from common system safety analysis would likely have a larger number of rules with similar complexities.
-Monitoring additional rules scales well as each rule adds at worst it's own checking time independent of the other rules and
-also because independent rules can be split up across multiple monitors.
+We note that the safety specification is simple and does not fully excercise the monitor's constraints. 
+%Safety specifications derived from common system safety analysis would likely have a larger number of rules with similar complexities.
+%Monitoring additional rules scales well as each rule adds at worst it's own checking time independent of the other rules and also because independent rules can be split up across multiple monitors.
 %
 % don't need hybrid here
 Since this specification is small, does not have long duration future-time formulas,
-and the monitor period is relatively slow ($25ms$) \ha and \monitor functions equivalently
-for the case study -- \monitor can always finish within the monitoring period in the worst case.
-We were able to eagerly monitor this specification plus an additional 200 residues in under $2ms$.
-If the specification properties required a faster trace resolution we would run into
-worst-case speed problems for \monitor and would require to use \ha.
+and the monitor period is relatively slow ($25ms$) \ha and \monitor function equivalently for the case study -- \monitor can always finish within the monitoring period in the worst case.
+%We were able to eagerly monitor this specification plus an additional 200 residues in under $2ms$.
+%If the specification properties required a faster trace resolution we would run into worst-case speed problems for \monitor and would require to use \ha.
 %
 We use the \ha for the study since it acts the same as \monitor when there is excess monitoring time.
-Using \ha helps us avoid worrying about the execution time.
-As long as the monitor can finish the conservative checks and
-history structure update within the period the monitor will be prompt.
-
+Using \ha allows us to avoid worrying about the execution time and has little downside.
+%As long as the monitor can finish the conservative checks and history structure update within the period the monitor will be prompt.
 
 
 \begin{table}[t]
@@ -206,7 +198,9 @@ history structure update within the period the monitor will be prompt.
 \caption{Case study monitoring specification \label{tab:monspec}}
 \end{table}
 
-$\pred{HeartBeatOn}$ is a guard which is true when once the target component has started in the logs (to avoid false-positive missing heartbeats during system startup).
+Table \ref{tab:monspec} shows the monitored specification. 
+$\pred{HeartBeatOn}$ is a guard used to avoid false-positive violations during system startup. 
+%which is true when once the target component has started in the logs (to avoid false-positive missing heartbeats during system startup).
 The system's heartbeat message contains a single heartbeat status bit which we checked directly in Rule \#0 to ensure the component is still running (essentially a watchdog message).
 The heartbeat message also has a rolling counter field.
 We use the \sfmap to ensure that this counter is incrementing correctly and output this check as the $\pred{HeartbeakOk}$ proposition which is monitored in Rule \#1.
@@ -256,8 +250,7 @@ Further inspection of this violation showed that the bad counter values were sen
 instead are observing
 % but actually it is
 messages that are being injected by the testing framework.
-This is not a real violation (since the violating state is not the actual system state),
-and so we consider this a false positive violation.
+This is a false positive violation since the violating state is not actual system state.
 
 
 
