--- a/rv2015/sections/Background.tex
+++ b/rv2015/sections/Background.tex
@@ -124,7 +124,7 @@ regular expressions which cannot capture timing properties.
 %%%%%%%%%%%%%%
 Basin et. al. compare runtime monitoring algorithms for MTL properties \cite{Basin2012}.
 \monitor works similarly to their point-based monitoring algorithm but \monitor checks
-future temporal operators more aggresively.
+future temporal operators more aggressively.
 Donz\'e \etal \cite{DFM13} developed a robustness monitor for Signal Temporal Logic  which
 supports continuous signals.
 Nickovic and Maler \cite{NM07} developed the  AWT tool which monitors analog systems.
