--- a/rv2015/sections/Conclusion.tex
+++ b/rv2015/sections/Conclusion.tex
@@ -2,7 +2,7 @@
 
 \section{Conclusion and Future Work}
 We have developed a runtime monitoring approach for an ARV system.
-Instead of instrumention, we passively monitor the system, generating the system trace from the observed network state.
+Instead of instrumentation, we passively monitor the system, generating the system trace from the observed network state.
 We have developed an efficient runtime monitoring algorithm, \monitor, that eagerly checks for violations of properties written
 in future-bounded propositional MTL. We have shown the efficiency of \monitor by implementing it and evaluating it against
 logs obtained from system testing of the ARV.
