--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -44,11 +44,11 @@ author={Nickovic, Dejan and Maler, Oded}
   author = {Bonakdarpour, Borzoo and Fischmeister, Sebastian},
   title = {Runtime Monitoring of Time-Sensitive Systems},
   booktitle = {Runtime Verification},
-  publisher = {Springer Berlin / Heidelberg},
+  //publisher = {Springer Berlin / Heidelberg},
   year = {2012},
   //editor = {Khurshid, Sarfraz and Sen, Koushik},
   volume = {7186},
-  series = {Lecture Notes in Computer Science},
+  series = {LNCS},
   pages = {19-33},
   __markedentry = {[akane:]},
   abstract = {This tutorial focuses on issues involved in runtime monitoring of
@@ -246,7 +246,7 @@ author={Nickovic, Dejan and Maler, Oded}
   author = {Kane, A. and Fuhrman, T. and Koopman, P.},
   title = {Monitor Based Oracles for Cyber-Physical System Testing: Practical
 	Experience Report},
-  booktitle = {Dependable Systems and Networks (DSN), 2014 44th Annual IEEE/IFIP International Conference on},
+  booktitle = {Dependable Systems and Networks (DSN)},
   year = {2014},
   pages = {148-155},
   //month = {June},
@@ -440,7 +440,7 @@ author={Nickovic, Dejan and Maler, Oded}
   institution = {CMU},
   //institution = {Carnegie Mellon University},
   year = {2015},
-  note = {See \url{http://users.ece.cmu.edu/~koopman/thesis/kane.pdf} temporarily for proofs},
+  note = {\url{http://users.ece.cmu.edu/~koopman/thesis/kane.pdf}},
   owner = {akane},
   timestamp = {2015.04.26}
 }
@@ -448,11 +448,11 @@ author={Nickovic, Dejan and Maler, Oded}
   author = {Basin, David and Klaedtke, Felix and Zalinescu, Eugen},
   title = {Algorithms for Monitoring Real-Time Properties},
   booktitle = {Runtime Verification},
-  publisher = {Springer Berlin Heidelberg},
+  //publisher = {Springer Berlin Heidelberg},
   year = {2012},
   //editor = {Khurshid, Sarfraz and Sen, Koushik},
   volume = {7186},
-  series = {Lecture Notes in Computer Science},
+  series = {LNCS},
   pages = {260-275},
   __markedentry = {[akane:]},
   doi = {10.1007/978-3-642-29860-8_20},
